--- a/templates/code.html
+++ b/templates/code.html
@@ -112,7 +112,7 @@
                 {% if results %}
                 <div class="ant-result-title">代码语义</div>
                 {% for item in results %}
-                <div class="ant-result-subtitle">{{ item }}</div>
+                    <div class="ant-result-subtitle"><code>{{ item }}</code></div>
                 {% endfor %}
                 {% endif %}
             </div>
