--- a/templates/code.html
+++ b/templates/code.html
@@ -24,8 +24,8 @@
             transition: all 0.2s;
         }
         .container {
-            max-width: 800px; /* Set a maximum width for the container */
-            margin: 0 auto; /* Center the container horizontally */
+            width: 100%;
+            margin: 0 0 16px;
         }
         .ant-menu-item-selected {
         background-color: purple;
