--- a/templates/upload_file.html
+++ b/templates/upload_file.html
@@ -39,8 +39,8 @@
             transition: all 0.2s;
         }
         .container {
-            max-width: 800px; /* Set a maximum width for the container */
-            margin: 0 auto; /* Center the container horizontally */
+            width: 100%;
+            margin: 0 0 16px;
         }
         .ant-menu-item-selected {
         background-color: purple;
@@ -87,7 +87,7 @@
                          <a href="/">首页</a>
                      </span>
                   </li>
-                  <li class="ant-menu-item ant-menu-item-selected" role="menuitem" tabindex="-1" style="padding-left: 24px;" data-menu-id="rc-menu-uuid-59451-1-2">
+                  <li class="ant-menu-item" role="menuitem" tabindex="-1" style="padding-left: 24px;" data-menu-id="rc-menu-uuid-59451-1-2">
                      <span role="img" aria-label="video-camera" class="anticon anticon-video-camera ant-menu-item-icon">
                         <svg viewBox="64 64 896 896" focusable="false" data-icon="video-camera" width="1em" height="1em" fill="currentColor" aria-hidden="true">
                            <path d="M912 302.3L784 376V224c0-35.3-28.7-64-64-64H128c-35.3 0-64 28.7-64 64v576c0 35.3 28.7 64 64 64h592c35.3 0 64-28.7 64-64V648l128 73.7c21.3 12.3 48-3.1 48-27.6V330c0-24.6-26.7-40-48-27.7zM712 792H136V232h576v560zm176-167l-104-59.8V458.9L888 399v226zM208 360h112c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H208c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"></path>
@@ -107,7 +107,7 @@
                          <a href="/query">查询数据</a>
                      </span>
                   </li>
-                   <li class="ant-menu-item" role="menuitem" tabindex="-1" style="padding-left: 24px;" data-menu-id="rc-menu-uuid-59451-1-3">
+                   <li class="ant-menu-item  ant-menu-item-selected" role="menuitem" tabindex="-1" style="padding-left: 24px;" data-menu-id="rc-menu-uuid-59451-1-3">
                      <span role="img" aria-label="upload" class="anticon anticon-upload ant-menu-item-icon">
                         <svg viewBox="64 64 896 896" focusable="false" data-icon="upload" width="1em" height="1em" fill="currentColor" aria-hidden="true">
                            <path d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"></path>
