--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,8 @@
             transition: all 0.2s;
         }
         .container {
-            max-width: 800px; /* Set a maximum width for the container */
-            margin: 0 auto; /* Center the container horizontally */
+            width: 100%;
+            margin: 0 0 16px;
         }
         .ant-menu-item-selected {
         background-color: purple;
@@ -114,7 +114,6 @@
             <main class="ant-layout-content css-12jzuas" style="margin: 24px 16px; padding: 24px; min-height: 280px; background: rgb(255, 255, 255);">
 			<div class="container">
                 <h1>代码向量数据库</h1>
-                    <div class="container">
                         <div class="code">
                             {% if results %}
                                 <h2 > 数据库中最近数据 </h2>
@@ -135,8 +134,6 @@
                             {% endif %}
                         </div>
                     </div>
-
-            </div>
 			</main>
          </section>
       </section>
