--- a/templates/query.html
+++ b/templates/query.html
@@ -96,25 +96,47 @@
             </header>
             <main class="ant-layout-content css-12jzuas" style="margin: 24px 16px; padding: 24px; min-height: 280px; background: rgb(255, 255, 255);">
 			<div class="container">
-
                 <form method="POST" action="/query">
                 <section class="code-box">
                     <section class="code-box-demo">
                         <h1 class="ant-typography">代码向量数据库</h1>
                         <h4 class="ant-typography">查询:</h4>
-                        <textarea placeholder="代码查询" class="ant-input"
-                            style="overflow-y: hidden; resize: none; height: 182px;" id="code" name="code"></textarea>
+                        <label for="query"></label>
+                        <textarea placeholder="代码查询" class="ant-input" style="overflow-y: hidden; resize: none; height: 182px;" id="query" name="query"></textarea>
                         <input type="submit" value="Submit" class="ant-btn ant-btn-primary">
                     </section>
                 </section>
             </form>
-            <section class="code-box">
-                <div class="ant-result ant-result-success">
+                <section class="ant-layout css-12jzuas">
+
+            <main class="ant-layout-content css-12jzuas" style="margin: 24px 16px; padding: 24px; min-height: 280px; background: rgb(255, 255, 255);">
+			<div class="container">
+{#            <section class="code-box">#}
+{#                <div class="ant-result ant-result-success">#}
                     {% if results %}
-                    <div class="ant-result-title">代码语义</div>
-                    {% for item in results %}
-                    <div class="ant-result-subtitle">{{ item }}</div>
-                    {% endfor %}
+                        <h2 > 查询最匹配代码 </h2>
+                        <div class="code">
+                            <table>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>距离</th>
+                                    <th>代码</th>
+                                    <th>语义</th>
+                                </tr>
+                                {% for item in results %}
+                                <tr>
+                                    <td>{{ item.id }}</td>
+                                    <td>{{ item.distance }}</td>
+                                    <td>{{ item.code }}</td>
+                                    <td>{{ item.semantics }}</td>
+                                </tr>
+                                {% endfor %}
+                            </table>
+                        </div>
+{#                    <div class="ant-result-title">代码语义</div>#}
+{#                    {% for item in results %}#}
+{#                    <div class="ant-result-subtitle">{{ item }}</div>#}
+{#                    {% endfor %}#}
                     {% endif %}
                 </div>
             </section>
