--- a/templates/index.html
+++ b/templates/index.html
@@ -108,9 +108,9 @@
             </div>
          </aside>
          <section class="ant-layout css-12jzuas">
-            <header class="ant-layout-header css-12jzuas" style="padding: 0px; background: rgb(255, 255, 255);">
-
-            </header>
+{#            <header class="ant-layout-header css-12jzuas" style="padding: 0px; background: rgb(255, 255, 255);">#}
+{##}
+{#            </header>#}
             <main class="ant-layout-content css-12jzuas" style="margin: 24px 16px; padding: 24px; min-height: 280px; background: rgb(255, 255, 255);">
 			<div class="container">
                 <h1>代码向量数据库</h1>
