update create connectiton

--- a/templates/code.html
+++ b/templates/code.html
@@ -108,6 +108,7 @@
             </section>
         </form>
         <section class="code-box">
+        <pre>
             <div class="ant-result ant-result-success">
                 {% if results %}
                 <div class="ant-result-title">代码语义</div>
@@ -116,6 +117,7 @@
                 {% endfor %}
                 {% endif %}
             </div>
+        </pre>
         </section>
 
         </div>
