--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
                         </svg>
                      </span>
                      <span class="ant-menu-title-content">
-                         <a href="/">首页</a>
+                         <a href="/">home</a>
                      </span>
                   </li>
                   <li class="ant-menu-item" role="menuitem" tabindex="-1" style="padding-left: 24px;" data-menu-id="rc-menu-uuid-59451-1-2">
@@ -80,7 +80,7 @@
                         </svg>
                      </span>
                      <span class="ant-menu-title-content">
-                         <a href="/code">插入数据</a>
+                         <a href="/code">Import Data</a>
                      </span>
                   </li>
                   <li class="ant-menu-item" role="menuitem" tabindex="-1" style="padding-left: 24px;" data-menu-id="rc-menu-uuid-59451-1-3">
@@ -90,7 +90,7 @@
                         </svg>
                      </span>
                      <span class="ant-menu-title-content">
-                         <a href="/query">查询数据</a>
+                         <a href="/query">Vector Search</a>
                      </span>
                   </li>
                    <li class="ant-menu-item" role="menuitem" tabindex="-1" style="padding-left: 24px;" data-menu-id="rc-menu-uuid-59451-1-3">
@@ -100,7 +100,7 @@
                         </svg>
                      </span>
                      <span class="ant-menu-title-content">
-                         <a href="/upload">上传文件</a>
+                         <a href="/upload">Upload file</a>
                      </span>
                   </li>
                </ul>
@@ -117,8 +117,8 @@
                                 <table>
                                     <tr>
                                         <th>ID</th>
-                                        <th>代码</th>
-                                        <th>语义</th>
+                                        <th>code</th>
+                                        <th>Semantics</th>
                                     </tr>
                                     {% for item in results %}
                                     <tr>
