--- a/templates/query.html
+++ b/templates/query.html
@@ -53,7 +53,7 @@
                         </svg>
                      </span>
                      <span class="ant-menu-title-content">
-                         <a href="/">首页</a>
+                         <a href="/">home</a>
                      </span>
                   </li>
                   <li class="ant-menu-item" role="menuitem" tabindex="-1" style="padding-left: 24px;" data-menu-id="rc-menu-uuid-59451-1-2">
@@ -63,7 +63,7 @@
                         </svg>
                      </span>
                      <span class="ant-menu-title-content">
-                         <a href="/code">插入数据</a>
+                         <a href="/code">Import Data</a>
                      </span>
                   </li>
                   <li class="ant-menu-item ant-menu-item-selected" role="menuitem" tabindex="-1" style="padding-left: 24px;" data-menu-id="rc-menu-uuid-59451-1-3">
@@ -73,7 +73,7 @@
                         </svg>
                      </span>
                      <span class="ant-menu-title-content">
-                         <a href="/query">查询数据</a>
+                         <a href="/query">Vector Search</a>
                      </span>
                   </li>
                    <li class="ant-menu-item" role="menuitem" tabindex="-1" style="padding-left: 24px;" data-menu-id="rc-menu-uuid-59451-1-3">
@@ -83,7 +83,7 @@
                         </svg>
                      </span>
                      <span class="ant-menu-title-content">
-                         <a href="/upload">上传文件</a>
+                         <a href="/upload">Upload file</a>
                      </span>
                   </li>
                </ul>
@@ -99,8 +99,8 @@
                 <form method="POST" action="/query">
                 <section class="code-box">
                     <section class="code-box-demo">
-                        <h1 class="ant-typography">代码向量数据库</h1>
-                        <h4 class="ant-typography">查询:</h4>
+                        <h1 class="ant-typography">local code vector database</h1>
+                        <h4 class="ant-typography">query:</h4>
                         <label for="query"></label>
                         <textarea placeholder="代码查询" class="ant-input" style="overflow-y: hidden; resize: none; height: 182px;" id="query" name="query"></textarea>
                         <input type="submit" value="Submit" class="ant-btn ant-btn-primary">
@@ -111,15 +111,15 @@
             <main class="ant-layout-content css-12jzuas" style="margin: 24px 16px; padding: 24px; min-height: 280px; background: rgb(255, 255, 255);">
 			<div class="container">
                     {% if results %}
-                        <h2 > 查询最匹配代码 </h2>
+                        <h2 >the most matching code</h2>
                         <pre>
                         <div class="code">
                             <table>
                                 <tr>
                                     <th>ID</th>
-                                    <th>距离</th>
-                                    <th>代码</th>
-                                    <th>语义</th>
+                                    <th>distance</th>
+                                    <th>code</th>
+                                    <th>semantics</th>
                                 </tr>
                                 {% for item in results %}
                                 <tr>
